# KDE-QT6-killswitch

./: CHANGELOG.md  CMakeLists.txt  README.md
polkit/: 50.killswitch.rules  org.kde.killswitch.policy
src/: main.cpp
